dnl Process this file with autoconf to produce a configure script.
dnl
dnl $Id: configure.in,v 1.3 2001/10/24 10:33:32 bornet Exp $
dnl

AC_INIT(pgboard/pgboard.c)

AM_INIT_AUTOMAKE(picogui-apps, 0.1)

AM_ACLOCAL_INCLUDE(macros)

AM_PGUI_CROSSCOMPILE

dnl Checks for programs.

dnl Checks for libraries.

dnl
dnl init : no special compilation flags
dnl
CFLAGS_ADD=""

dnl
dnl to enable optimisation
dnl
AC_ARG_ENABLE(optimisation,
[  --enable-optimisation    enable optimisation (-O2)],
  if test "$enable_optimisation" = yes; then
    CFLAGS_ADD="${CFLAGS_ADD} -O2 "
  fi
)

dnl
dnl final setup of CFLAGS
dnl
CFLAGS="${CFLAGS_ADD}"

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_HEADER_STDC

AC_ARG_WITH(picogui,
[  --with-picogui=<prefix>       path to picogui client installation],
[
  PICOGUI_CFLAGS="-I${withval}/include"
  PICOGUI_LDFLAGS="-L${withval}/lib"
  PICOGUI_LIBS="-lpgui"
],[
  PICOGUI_CFLAGS=""
  PICOGUI_LDFLAGS=""
  PICOGUI_LIBS="-lpgui"
]
)

AC_SUBST(PICOGUI_CFLAGS)
AC_SUBST(PICOGUI_LDFLAGS)
AC_SUBST(PICOGUI_LIBS)

dnl
dnl Check target architecture and add specific entries for uClinux
dnl

case "$host" in
  m68k-pic-*)
        CFLAGS="${CFLAGS} -fPIC -DRUNTIME_FUNCPTR -d_NEED_NTOHS_FRIENDS_"
esac

AC_SUBST(PLATFORM)
AC_SUBST(LIB_OS)

dnl for integration in the bee compilation system
AM_BEE_RPMPROFILE

AC_ARG_ENABLE(bee, 
[  --enable-bee     use the bee building system])

AM_CONDITIONAL(ENABLE_BEE, test "${enable_bee}" = "yes")

AC_OUTPUT(
	Makefile
	picogui-apps.spec
	pgboard/Makefile
	pgboard/examples/Makefile
)
