dnl Process this file with autoconf to produce a configure script.
dnl
dnl $Id: configure.in,v 1.23 2002/02/15 19:08:33 bornet Exp $
dnl

AC_INIT(pgboard/pgboard.c)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(picogui-apps, 0.5)

AM_ACLOCAL_INCLUDE(macros)

AM_PGUI_CROSSCOMPILE

AM_PROG_LIBTOOL

dnl Checks for programs.

dnl Checks for libraries.

dnl
dnl init : no special compilation flags
dnl
CFLAGS_ADD=""

dnl
dnl to enable optimisation
dnl
AC_ARG_ENABLE(optimisation,
[  --enable-optimisation    enable optimisation (-O2)],
  if test "$enable_optimisation" = yes; then
    CFLAGS_ADD="${CFLAGS_ADD} -O2 "
  fi
)

dnl
dnl final setup of CFLAGS
dnl
CFLAGS="${CFLAGS_ADD}"

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_HEADER_STDC

dnl
dnl to specify the path to PicoGUI
dnl 
AC_ARG_WITH(picogui,
[  --with-picogui=<prefix>       path to picogui client installation],
[
  PICOGUI_CFLAGS="-I${withval}/include"
  PICOGUI_LDFLAGS="-L${withval}/lib"
  PICOGUI_LIBS="-lpgui"
  PICOGUI_LOCATION="${withval}"
],[
  PICOGUI_CFLAGS=""
  PICOGUI_LDFLAGS=""
  PICOGUI_LIBS="-lpgui"
  if test "x$prefix" != xNONE; then
    PICOGUI_LOCATION="$prefix"
  else
    PICOGUI_LOCATION="$ac_default_prefix"
  fi
]
)

AC_SUBST(PICOGUI_CFLAGS)
AC_SUBST(PICOGUI_LDFLAGS)
AC_SUBST(PICOGUI_LIBS)
AC_SUBST(PICOGUI_LOCATION)

dnl
dnl to enable usage of the PockBee Resource Manager
dnl
AC_ARG_WITH(rm,
[  --with-rm=<prefix>            path to PockBee Resource Manager installation],
[
  if test "$with_rm" != no; then
    AC_DEFINE(USE_RM, 1)
    RM_CFLAGS="-I${with_rm}/include" 
    RM_LDFLAGS="-L${with_rm}/lib"
    RM_LIBS="-lrm"
  fi
],[
  RM_CFLAGS=""
  RM_LDFLAGS=""
  RM_LIBS=""
]
)

AC_SUBST(RM_CFLAGS)
AC_SUBST(RM_LDFLAGS)
AC_SUBST(RM_LIBS)

dnl
dnl to enable debug
dnl
AC_ARG_ENABLE(debug,
[  --enable-debug           enable runtime debugging code],
  if test "$enable_debug" = yes; then
    AC_DEFINE(DEBUG, 1)
  fi
)

dnl
dnl Check target architecture and add specific entries for uClinux
dnl

case "$host" in
  m68k-pic-*)
        CFLAGS="${CFLAGS} -fPIC -DRUNTIME_FUNCPTR -d_NEED_NTOHS_FRIENDS_"
        PLATFORM="uclinux"
        ;;
esac

AC_SUBST(PLATFORM)
AC_SUBST(LIB_OS)

dnl for integration in the bee compilation system
AM_BEE_RPMPROFILE

AC_ARG_ENABLE(bee, 
[  --enable-bee     use the bee building system])

AM_CONDITIONAL(ENABLE_BEE, test "${enable_bee}" = "yes")

dnl indicate we are compiling for PocketBee
AC_ARG_ENABLE(pocketbee,
[  --enable-pocketbee     compile for PocketBee],
  if test "$enable_pocketbee" = yes; then
    AC_DEFINE(POCKETBEE, 1)
  fi
)


AC_OUTPUT(
	Makefile
	picogui-apps.spec
	pgedit/Makefile
	pterm/Makefile
	pgboard/Makefile
	pgboard/examples/Makefile
	fieldtest/Makefile
	vrcalc/Makefile
	gridgame/Makefile
	bouncyball/Makefile
	bouncyball/data/Makefile
	omnibar/Makefile
	pgtuxphone/Makefile
	battleship/Makefile
	blackout/Makefile
	canvastst/Makefile
	dialogdemo/Makefile
	galaxy/Makefile
	imgview/Makefile
	scribble/Makefile
	tpcal/Makefile
	atomicnav/Makefile
	pgl/Makefile
	pgl/pgl-toolbar/Makefile
	pgl/pgl-launcher/Makefile
	pgl/pgl-clock/Makefile
	pgl/pgl-keyboard/Makefile
	hello/Makefile
	picomail/Makefile
	pgmon/Makefile
)
