dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/api.c)

AM_INIT_AUTOMAKE(picogui-client, 0.0)

AM_CONFIG_HEADER(config.h)
AM_ACLOCAL_INCLUDE(macros)

AM_PGUI_CROSSCOMPILE

AM_PROG_LIBTOOL

dnl Checks for programs.

dnl Checks for libraries.

PLATFORM=""

case "$host" in
  m68k-pic-*)
	CFLAGS="-O2 -fPIC -DUCLINUX -DRUNTIME_FUNCPTR"
	PLATFORM="platform.c"
	;;
esac

AC_SUBST(PLATFORM)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h malloc.h sys/time.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(socket strtol)

AC_OUTPUT(
	Makefile
	src/Makefile
	demos/Makefile
	include/Makefile
	include/picogui/Makefile
)
