dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/res_c.c)

AM_INIT_AUTOMAKE(res_c, 0.0)

AM_CONFIG_HEADER(config.h)

#AM_ACLOCAL_INCLUDE(macros)

AM_PROG_LIBTOOL

dnl Checks for programs.

dnl Checks for libraries.

PLATFORM=""

case "$host" in
  m68k-pic-*)
	CFLAGS="-O2 -fPIC -DUCLINUX -DRUNTIME_FUNCPTR"
	PLATFORM="platform.c"
	;;
esac

AC_SUBST(PLATFORM)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h malloc.h sys/time.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_TYPE_SIGNAL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(socket strtol)

dnl Check for PicoGUI support.
picogui_support_enabled="no"
AC_ARG_ENABLE(picogui-support,
	[ --enable-picogui-support	enable PicoGUI support (default: disabled)],
	if test "$enable_picogui_support" = "yes"; then
		picogui_support_enabled="yes"
	fi
)
if test "$enable_picogui_support" = "yes" ; then
	CFLAGS="$CFLAGS -DCONFIG_PICOGUI_SUPPORT"
fi

AC_OUTPUT(
	Makefile
	src/Makefile
	include/Makefile
	tools/Makefile
)
