dnl Process this file with autoconf to produce a configure script.
AC_INIT(include/picogui/constants.h)

dnl Checks for programs.
AM_INIT_AUTOMAKE(pgui-themetools, 1.1.1)

dnl Checks for libraries.
AC_PROG_CC
AM_PROG_LEX
AC_PROG_YACC

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(malloc.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup strstr strtol)

dnl Check for threading support
threading_enable=no
AC_ARG_ENABLE(threading,
        [ --enable-threading            enable threading support (default disabled)],
        test $enable_threading = "yes" && threading_enable=yes,
        )

if test "$threading_enable" = "yes"; then
   CFLAGS="$CFLAGS -DENABLE_THREADING_SUPPORT"
fi

AC_OUTPUT(
	Makefile
	thdump/Makefile
	themec/Makefile
	pgbg/Makefile
	themetools.spec
)
