dnl Process this file with autoconf to produce a configure script.
AC_INIT(configure.in)

dnl Checks for programs.
AM_INIT_AUTOMAKE(pgui-themetools, 1.1.1)

dnl Checks for libraries.
AC_PROG_CC
AM_PROG_LEX
AC_PROG_YACC
AC_PROG_LIBTOOL

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(malloc.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup strstr strtol)

dnl Check for threading support
threading_enable=no
AC_ARG_ENABLE(threading,
        [ --enable-threading       enable threading support (default disabled)],
        test $enable_threading = "yes" && threading_enable=yes,
        )

if test "$threading_enable" = "yes"; then
   CFLAGS="$CFLAGS -DENABLE_THREADING_SUPPORT"
fi

dnl Check whether they want OpenGL constants
AC_ARG_ENABLE(opengl,
        [    --enable-opengl       Include OpenGL constants],
        [case "${enableval}" in
           yes)  opengl=true ;;
            no)  opengl=false ;;
             *) AC_MSG_ERROR(bad value ${enableval} for --enable-opengl) ;;
        esac],[opengl=false])
AM_CONDITIONAL(OPENGL, test x$opengl = xtrue)

dnl We need expat for parsing Widget Templates
AC_CHECK_LIB(expat,XML_ParserCreate)

AC_OUTPUT(
	Makefile
	thdump/Makefile
	themec/Makefile
	pgbg/Makefile
	themetools.spec
	libpgwt/Makefile
)
